add command argument parsing and execution framework